--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "axios": "^1.8.2",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "express-validator": "^7.2.1"
+    "express-validator": "^7.2.1",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.13.10"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
